# cansat

./: Cargo.toml  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: blink.rs  bme280.rs  bmp280.rs  display.rs  errors.rs  lib.rs  main.rs  mpu6050.rs  utils.rs
