[package]
name = "cansat"
version = "0.1.0"
authors = ["Sycrosity <72102935+Sycrosity@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = { version = "0.17.0", features = ["embassy", "embassy-executor-thread", "async", "embassy-time-timg0", "embassy-time", "log", "bluetooth"] }
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32", "log", "uart"] }

esp-alloc = { version = "0.3.0", optional = true }

# esp-wifi  = { version = "0.2.0", features = ["esp32", "wifi", "embassy-net", "wifi-logs"] }
# smoltcp = { version = "0.11.0", default-features = false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

log = "0.4.20"
embedded-error-chain = "1.0.0"
static_cell = "2.0.0"

embedded-svc = { version = "0.26.4", default-features = false, features = ["log"] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }

embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }
ssd1306 = "0.8.4"

embassy-executor = { version = "0.4.0", features = ["nightly", "log"] }
embassy-time = { version = "0.2.0", features = ["log"] }
embassy-sync = { version = "0.5.0", features = ["log"] }
embassy-net = { version = "0.3.0", features = ["log"], optional = true }

mpu6050 = "0.1.6"
shared-bus = { version = "0.3.1", features = ["xtensa"] }

[features]
alloc = ["dep:esp-alloc"]
net = [
    # "dep:esp-wifi",
    "dep:embassy-net"
    ]
