[package]
name = "cansat"
version = "0.1.0"
authors = ["Sycrosity <72102935+Sycrosity@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = { version = "0.17.0", features = ["embassy", "embassy-executor-thread", "async", "embassy-time-timg0", "embassy-time", "log", "bluetooth"] }
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32", "log", "uart"] }

esp-alloc = { version = "0.3.0", optional = true }

# esp-wifi  = { version = "0.2.0", features = ["esp32", "wifi", "embassy-net", "wifi-logs"], optional = true }
# smoltcp = { version = "0.11.0", default-features = false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

log = "0.4.20"
embedded-error-chain = "1.0.0"

shared-bus = { version = "0.4.0", features = ["xtensa"] }
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }
nalgebra = { version = "0.32.3", default-features = false }

embedded-svc = { version = "0.26.4", default-features = false, features = ["log"] }
embedded-io = "0.6.1"
embedded-hal = "^1.0"
# embedded-hal-async = { version = "1.0.0" }

heapless = { version = "0.8.0", default-features = false }



embassy-executor = { version = "0.5.0", features = ["nightly", "log"] }
embassy-time = { version = "0.3.0", features = ["log"] }
embassy-sync = { version = "0.5.0", features = ["log"] }
embassy-net = { version = "0.4.0", features = ["log", "proto-ipv4", "dns", "tcp", "medium-ethernet"], optional = true }

mpu6050 = { version = "0.1.6", git = "https://github.com/Sycrosity/mpu6050" }
ssd1306 = { version = "0.8.4", git = "https://github.com/Sycrosity/ssd1306" }
#for the bmp280 senosr
bme280 = { version = "0.4.4", features = [], git = "https://github.com/Sycrosity/bme280-rs" }

[features]
alloc = ["dep:esp-alloc"]
net = [
    # "dep:esp-wifi",
    "dep:embassy-net"
    ]
# log = ["dep:log",""]

[patch.crates-io]
esp32-hal = { git = "https://github.com/Sycrosity/esp-hal" }
shared-bus = { version = "0.4.0", git = "https://github.com/Sycrosity/shared-bus" }
