[package]
name = "cansat"
version = "0.1.0"
authors = ["Sycrosity <72102935+Sycrosity@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = { version = "0.18.0", features = ["embassy", "embassy-executor-thread", "async", "embassy-time-timg0", "bluetooth", "embedded-io"] }
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32", "uart"] }

esp-alloc = { version = "0.3.0", optional = true }

esp-wifi  = { version = "0.3.0", features = ["esp32", "wifi", "embassy-net", "wifi-logs"], optional = true }
# smoltcp = { version = "0.11.0", default-features = false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

#the gold standard for logging in rust
log = "0.4.20"
embedded-error-chain = "1.0.0"
#implimentation of the c "libm" maths library
libm = "0.2.8"

#traits and functions for working with embedded graphics in rust
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }
#a general purpose linear algebra library
nalgebra = { version = "0.32.3", default-features = false }


embedded-svc = { version = "0.27.0", default-features = false, optional = true }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

embedded-hal = "^1.0"
embedded-hal-async = "^1.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
critical-section = "1.1.2"

# heapless = { version = "0.8.0", default-features = false }

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time     = { version = "0.3.0" }
embassy-sync     = { version = "0.5.0" }
embassy-net      = { version = "0.4.0", features = ["proto-ipv4", "dns", "tcp", "medium-ethernet"], optional = true }

mpu6050  =  { version = "0.1.6" }
ssd1306  =  { version = "0.8.4" }
bme280   =  { version = "0.5.0" }
qmc5883l =  { version = "0.1.0" }
# hmc5883-async = { version = "0.1.3" }

[features]
default = ["log"]
alloc = ["dep:esp-alloc"]
net = [
    "dep:esp-wifi",
    "dep:embassy-net",
    "dep:embedded-svc"
]

log = [
    "embassy-net/log",
    "embassy-time/log",
    "embassy-sync/log",
    "embassy-executor/log",
    "embedded-svc/log",
    "esp-println/log",
    "esp32-hal/log"
]
defmt = []

[patch.crates-io]
qmc5883l =  { version = "0.1.0", git = "https://github.com/Sycrosity/qmc5883l" }
ssd1306  =  { version = "0.8.4", git = "https://github.com/Sycrosity/ssd1306" }
mpu6050  =  { version = "0.1.6", git = "https://github.com/Sycrosity/mpu6050" }
# hmc5883-async = { version = "0.1.3", git = "https://github.com/Sycrosity/hmc5883-async" }
